syntax = "proto3";

option go_package = "github.com/rishiraj-intel/grpc-demo";

service HelloWorldService {
  rpc SayHello (HelloWorldRequest) returns (HelloWorldResponse);
}

message HelloWorldRequest {
  string message = 1;
}

message HelloWorldResponse {
  string message = 1;
}

